# Luft

./: .gitignore  Cargo.toml  README.md  install.sh  staccato.md
crates/asher-ipc/: Cargo.toml
crates/asher-session/: build.rs
crates/asher-shell/: Cargo.toml
crates/asher-shell/src/: chrome.rs  ipc.rs  main.rs  theme.rs
crates/asher-shell/src/apps/: desktop_entry.rs  mod.rs
crates/asher-shell/src/panel/: app.rs  pins.rs  state.rs
crates/asher-shell/src/services/: notifications.rs
crates/asher-shell/src/web/: action_dispatch.rs  actions.rs  appearance.rs  command_actions.rs  dock_actions.rs  init.rs  lazy_surface.rs  mod.rs  model.rs  palette.rs  panel_actions.rs  popover_actions.rs  running_order.rs  settings_command.rs  snapshot.rs  startup_apps.rs  surface.rs  surface_layout.rs  surface_motion.rs  surface_sizing.rs  sync.rs  web_surface.rs  window_actions.rs
crates/asher-shell/web/: README.md
crates/asher-shell/web/src/: App.svelte  main.ts
crates/asher-shell/web/src/components/: AppButton.svelte  AppIcon.svelte  DateCenter.svelte  Dock.svelte  Panel.svelte  PanelMenu.svelte  QuickSettings.svelte  StartMenu.svelte  Taskbar.svelte
crates/asher-shell/web/src/lib/: app_icons.ts  app_motion.ts  panel_reorder.ts  start_menu_state.ts
crates/asher-shell/web/src/shell/: bridge.ts  icons.ts  model.ts
crates/asher-shell/web/src/styles/: app_icon.css  dock.css  main.css  panel.css  panel_menu.css  quick_settings.css  settings.css  start_menu.css  taskbar.css
crates/baton/: Cargo.toml
crates/baton/src/: background.rs  background_effect.rs  blur_material.rs  client.rs  cursor.rs  damage.rs  debug_overlay.rs  frame_clock.rs  ipc.rs  ipc_summary.rs  layers.rs  layout_config.rs  loading_overlay.rs  main.rs  protocol_state.rs  scene_blur.rs  scene_render.rs  session_services.rs  shell.rs  state_focus.rs  window_animation.rs  window_clip.rs  window_geometry.rs  workspace_transition.rs  xwayland.rs
crates/baton/src/backend/: drm.rs  headless.rs  mod.rs  nested.rs  nested_timing.rs
crates/baton/src/backend/drm/: device.rs  frame.rs  mod.rs  runtime.rs
crates/baton/src/input/: mod.rs
crates/baton/src/output/: mod.rs
crates/baton/src/protocols/: mod.rs
crates/baton/src/recovery/: mod.rs
crates/baton/src/render/: mod.rs
crates/baton/src/state/: mod.rs  output_state.rs  shell_control.rs
crates/baton/src/titlebar/: draw.rs  mod.rs
crates/baton/src/window/: hit.rs  mod.rs  ops.rs  stack.rs
crates/kestrel/: Cargo.toml
crates/kestrel/protocols/: vicinae-hotkey-v1.xml
crates/kestrel/src/: background.rs  background_effect.rs  blur_material.rs  client.rs  compositor_damage.rs  damage.rs  ipc.rs  ipc_summary.rs  layers.rs  layout_config.rs  loading_overlay.rs  main.rs  protocol_state.rs  scene_backdrop.rs  scene_blur.rs  scene_composite.rs  scene_render.rs  session_services.rs  shell.rs  state_focus.rs  vicinae_hotkey.rs  window_animation.rs  window_clip.rs  window_geometry.rs  workspace_transition.rs  xwayland.rs
crates/kestrel/src/backend/: headless.rs  mod.rs  nested.rs  nested_timing.rs
crates/kestrel/src/backend/drm/: cursor.rs  device.rs  frame.rs  mod.rs  runtime.rs  scanout.rs
crates/kestrel/src/backend/drm/device/: outputs.rs
crates/kestrel/src/background_effect/: targets.rs
crates/kestrel/src/input/: gestures.rs  mod.rs  shortcuts.rs
crates/kestrel/src/output/: graph.rs  mod.rs
crates/kestrel/src/protocols/: mod.rs  toplevel_icon.rs  xdg.rs
crates/kestrel/src/render/: mod.rs
crates/kestrel/src/scene_blur/: geometry.rs  render_pass.rs
crates/kestrel/src/shaders/: scene_blur.frag
crates/kestrel/src/state/: layers.rs  mod.rs  output_state.rs  shell_control.rs
crates/kestrel/src/titlebar/: draw.rs  mod.rs
crates/kestrel/src/window/: geometry.rs  hit.rs  mod.rs  ops.rs  stack.rs  stack_hit.rs
crates/luft-config/: Cargo.toml
crates/luft-ipc/: Cargo.toml
crates/luft-portal/: Cargo.toml
crates/luft-portal/src/: main.rs  settings.rs
crates/luft-session/: Cargo.toml  build.rs
crates/luft-session/src/: lib.rs  main.rs
crates/luft-shell/: Cargo.toml
crates/staccato-config/: Cargo.toml
crates/staccato-ipc/: Cargo.toml
crates/staccato-layout/: Cargo.toml
crates/staccato-session/: Cargo.toml
crates/staccato-shell/: Cargo.toml
crates/staccato-shell/src/: chrome.rs  color.rs  control.rs  ipc.rs  main.rs  theme.rs
crates/staccato-shell/src/apps/: browser_launch.rs  desktop_entry.rs  mod.rs  xdg.rs
crates/staccato-shell/src/dock/: app.rs  mod.rs  pins.rs  state.rs
crates/staccato-shell/src/services/: mod.rs  notifications.rs  system_status.rs  tray.rs
crates/staccato-shell/src/web/: actions.rs  chrome_visibility.rs  command_actions.rs  icons.rs  init.rs  mod.rs  model.rs  surface.rs  surface_layout.rs  surface_sizing.rs  sync.rs
crates/staccato-shell/web/: README.md  index.html  package.json
crates/staccato-shell/web/src/: App.svelte
crates/staccato-shell/web/src/components/: AppButton.svelte  AppIcon.svelte  ControlSlider.svelte  DateCenter.svelte  DebugMeter.svelte  Dock.svelte  DockMenu.svelte  NotificationToast.svelte  Overview.svelte  QuickSettings.svelte  Sidebar.svelte  StatusCluster.svelte  Taskbar.svelte  TopPanel.svelte
crates/staccato-shell/web/src/lib/: app_icons.ts  calendar.ts  geometry.ts  labels.ts  notifications.ts  overview_state.ts  workspace_wheel.ts
crates/staccato-shell/web/src/shell/: bridge.ts  icons.ts  model.ts
crates/staccato-shell/web/src/state/: launch_state.ts
crates/staccato-shell/web/src/styles/: app_icon.css  calendar.css  date_center.css  dock.css  main.css  notification_center.css  notification_toast.css  overview.css  overview_apps.css  overview_search.css  overview_workspaces.css  quick_settings.css  sidebar.css  taskbar.css
crates/staccatoctl/: Cargo.toml
crates/staccatoctl/src/: dev_cli.rs  diagnostics.rs  dock_cli.rs  doctor.rs  main.rs  mode_cli.rs  recovery_cli.rs  workspace_cli.rs
crates/staccatoctl/src/dev_cli/: install.rs
docs/: app-compatibility-inventory.md  configuration.md  development.md  running.md  shell-and-compositor.md  shortcuts.md
(+109 files in other folders)
