[workspace]
members = [
    "crates/kestrel",
    "crates/asher-config",
    "crates/asher-ipc",
    "crates/asher-session",
    "crates/asher-shell",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
bitflags = "2.11.1"
calloop = { version = "0.14.4", features = ["signals"] }
clap = { version = "4.6.1", features = ["derive"] }
input = "0.9.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
smithay = { version = "0.7.0", default-features = false, features = ["backend_winit", "desktop", "wayland_frontend"] }
thiserror = "2.0.18"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
wayland-backend = "0.3.15"
wayland-scanner = "0.31.10"
wayland-server = "0.31.13"

asher-config = { path = "crates/asher-config" }
asher-ipc = { path = "crates/asher-ipc" }
asher-session = { path = "crates/asher-session" }

[profile.dev.package."kestrel"]
opt-level = 2

[profile.dev.package."asher-shell"]
opt-level = 2

[profile.dev.package."smithay"]
opt-level = 2
