[package]
name = "kestrel"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bitflags.workspace = true
calloop.workspace = true
clap.workspace = true
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
input = { workspace = true, optional = true }
smithay.workspace = true
luft-config.workspace = true
luft-ipc = { version = "0.1.0", path = "../luft-ipc" }
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wayland-backend.workspace = true
wayland-scanner.workspace = true
wayland-server.workspace = true

[features]
session-backend = [
    "dep:input",
    "smithay/backend_drm",
    "smithay/backend_gbm",
    "smithay/backend_libinput",
    "smithay/backend_session_libseat",
    "smithay/backend_udev",
    "smithay/renderer_gl",
]
