[package]
name = "luft-session"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
luft-config.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
