[package]
name = "staccato-shell"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
gtk = "0.18.2"
gtk-layer-shell = { version = "0.8.2", features = ["v0_6"] }
serde.workspace = true
serde_json.workspace = true
staccato-config.workspace = true
staccato-ipc = { version = "0.1.0", path = "../staccato-ipc" }
staccato-layout = { version = "0.1.0", path = "../staccato-layout" }
time = { version = "0.3.47", features = ["formatting", "local-offset", "macros"] }
tracing.workspace = true
tracing-subscriber.workspace = true
wry = { version = "0.55.1", default-features = false, features = ["os-webview"] }
zbus = { version = "5.15.0", features = ["blocking-api"] }
webkit2gtk = { version = "2.0.2", features = ["v2_16"] }
