[package]
name = "staccato-shell"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
fenestra-cef = { path = "../../../fenestra/crates/fenestra-cef" }
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
serde.workspace = true
serde_json.workspace = true
staccato-config.workspace = true
staccato-ipc = { version = "0.1.0", path = "../staccato-ipc" }
staccato-layout = { version = "0.1.0", path = "../staccato-layout" }
time = { version = "0.3.47", features = ["formatting", "local-offset", "macros"] }
tracing.workspace = true
tracing-subscriber.workspace = true
zbus = { version = "5.15.0", features = ["blocking-api"] }
