[package]
name = "staccatoctl"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
staccato-config.workspace = true
staccato-ipc.workspace = true
staccato-layout.workspace = true
tracing-subscriber.workspace = true
